# heat-parser

./: .gitignore  .pre-commit-config.yaml  macos-bootstrap.sh  parser_links.py  pyproject.toml
client/web/templates/: search.css  search.html
modules/redis/: models.py
parsing/: consts.py  exports.py  internal.py  parsers.py  registry.py  service.py  utils.py
parsing/tests/: test_parsers.py
