[tool.poetry]
name = "heat-parser"
version = "0.1.0"
description = ""
authors = ["andrejmaznin <andrejmaznin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
requests = "^2.27.1"
pymorphy2 = "^0.9.1"
python-dateutil = "^2.8.2"
phonenumbers = "^8.12.45"
pre-commit = "^2.17.0"
isort = "^5.10.1"
mypy = "^0.942"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
